fix some bad image spacing after gatsby-image switch

--- a/src/assets/scss/components/_image.scss
+++ b/src/assets/scss/components/_image.scss
@@ -6,57 +6,88 @@
 
 /* Image */
 
-	.image {
-		border: 0;
-		display: inline-block;
-		position: relative;
+#one .knee-right {
+  display: block;
+  width: 100%;
+  float: none;
+  margin-right: auto;
+  margin-left: auto;
+}
 
-		img {
-			display: block;
-		}
+#one .knee-right > div {
+  display: block !important;
+  margin-right: auto;
+  margin-left: auto;
+}
 
-		&.left,
-		&.right {
-			max-width: 30%;
+@media (min-width: 500px) {
+  #one .knee-right {
+    display: block;
+    width: auto;
+    padding-left: 2em;
+    float: right;
+    margin-right: auto;
+    margin-left: auto;
+  }
 
-			img {
-				width: 100%;
-			}
-		}
+  #one .knee-right > div {
+    display: inline-block !important;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
 
-		&.left {
-			float: left;
-			margin: 0 1.5em 1.25em 0;
-			top: 0.25em;
-		}
+.image {
+  border: 0;
+  display: inline-block;
+  position: relative;
 
-		&.right {
-			float: right;
-			margin: 0 0 1.25em 1.5em;
-			top: 0.25em;
-		}
+  img {
+    display: block;
+  }
 
-		&.fit {
-			display: block;
-			margin: 0 0 _size(element-margin) 0;
-			width: 100%;
+  &.left,
+  &.right {
+    // max-width: 30%;
 
-			img {
-				width: 100%;
-			}
-		}
+    img {
+      width: 100%;
+    }
+  }
 
-		&.main {
-			display: block;
-			margin: (_size(element-margin) * 1.25) 0;
-			width: 100%;
+  &.left {
+    float: left;
+    margin: 0 1.5em 1.25em 0;
+    top: 0.25em;
+  }
 
-			img {
-				width: 100%;
-			}
+  &.right {
+    float: right;
+    margin: 0 0 1.25em 1.5em;
+    top: 0.25em;
+  }
 
-			@include breakpoint(small) {
-				margin: (_size(element-margin) * 0.75) 0;
-			}
-		}
-	}
+  &.fit {
+    display: block;
+    margin: 0 0 _size(element-margin) 0;
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  &.main {
+    display: block;
+    margin: (_size(element-margin) * 1.25) 0;
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
+
+    @include breakpoint(small) {
+      margin: (_size(element-margin) * 0.75) 0;
+    }
+  }
+}
